gateway-api/openresty/referencegrant-tls.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: aicloud1-llmroute
  namespace: "gateway-secrets"
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: llm-route
  to:
  - group: ""
    kind: Secret
