gateway-api/openresty/httproute-openresty.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openresty
  namespace: llm-route
spec:
  parentRefs:
  - name: openresty
    namespace: llm-route
  hostnames:
  - "llm.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openresty
      port: 8080
